--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,15 @@ if(UNIX)
     )
 endif()
 
+get_target_property(hdf5_dll_path HDF5::HDF5 IMPORTED_LOCATION_<CONFIG>)
+get_filename_component(hdf5_dll_path "${hdf5_dll_path}" DIRECTORY)
+
+# Copy HDF5 DLL
+add_custom_command(TARGET NXH5Support POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+    ${hdf5_dll_path}
+    $<TARGET_FILE_DIR:NXH5Support>)
+
 option(NXH5SUPPORT_ENABLE_LINK_FILESYSTEM "Enables linking to a C++ filesystem library" OFF)
 
 if(NXH5SUPPORT_ENABLE_LINK_FILESYSTEM)
@@ -94,12 +103,12 @@ endif()
 
 set(NXH5SUPPORT_GENERATED_DIR ${NXH5Support_BINARY_DIR}/generated)
 set(NXH5SUPPORT_GENERATED_HEADER_DIR ${NXH5Support_BINARY_DIR}/generated/NXH5Support)
-set(NXNXH5SUPPORT_EXPORT_HEADER ${NXH5SUPPORT_GENERATED_HEADER_DIR}/NXNXH5SUPPORT_EXPORT.hpp)
+set(NXH5SUPPORT_EXPORT_HEADER ${NXH5SUPPORT_GENERATED_HEADER_DIR}/NXH5Support_export.hpp)
 
 include(GenerateExportHeader)
 generate_export_header(NXH5Support
-    EXPORT_FILE_NAME ${NXNXH5SUPPORT_EXPORT_HEADER}
-    CUSTOM_CONTENT_FROM_VARIABLE NXNXH5SUPPORT_EXPORT_HEADER_EXTRA
+    EXPORT_FILE_NAME ${NXH5SUPPORT_EXPORT_HEADER}
+    CUSTOM_CONTENT_FROM_VARIABLE NXH5SUPPORT_EXPORT_HEADER_EXTRA
 )
 
 set(NXH5SUPPORT_SOURCE_DIR ${NXH5Support_SOURCE_DIR}/src/NXH5Support)
@@ -128,7 +137,7 @@ set(NXH5SUPPORT_HDRS
 )
 
 set(NXH5SUPPORT_GENERATED_HEADERS
-    ${NXNXH5SUPPORT_EXPORT_HEADER}
+    ${NXH5SUPPORT_EXPORT_HEADER}
 )
 
 set(NXH5SUPPORT_SRCS
